--- a/CS50x/week8/lab8/trivia/styles.css
+++ b/CS50x/week8/lab8/trivia/styles.css
@@ -23,11 +23,11 @@ body {
     text-align: center;
 }
 
-.section {
+.section1, .section2 {
     padding: 0.5rem 2rem 1rem 2rem;
 }
 
-.section:hover {
+.section1:hover, .section2:hover {
     background-color: #f5f5f5;
     transition: color 2s ease-in-out, background-color 0.15s ease-in-out;
 }
@@ -50,6 +50,10 @@ button, input[type="submit"] {
     vertical-align: middle;
 }
 
+.btn:hover {
+    background-color:#5660f3;
+}
+
 
 input[type="text"] {
     line-height: 1.8;
@@ -59,4 +63,20 @@ input[type="text"] {
 input[type="text"]:hover {
     background-color: #f5f5f5;
     transition: color 2s ease-in-out, background-color 0.15s ease-in-out;
+}
+
+ol {
+    list-style-type: upper-alpha;
+}
+
+li {
+    margin-top: 15px;
+}
+
+.MCQ {
+    color: white;
+}
+
+.FRQ {
+    color: white;
 }
