--- a/CS50x/week9/lab9/birthdays/templates/index.html
+++ b/CS50x/week9/lab9/birthdays/templates/index.html
@@ -14,7 +14,18 @@
             <div class="section">
 
                 <h2>Add a Birthday</h2>
-                <!-- TODO: Create a form for users to submit a name, a month, and a day -->
+                <!-- TODO_DONE: Create a form for users to submit a name, a month, and a day -->
+                <form action="/" method="post">
+                    <input autocomplete="off" autofocus name="name" placeholder="Name" type="text">
+                    <input autocomplete="off" autofocus name="month" placeholder="Birthday Month" type="text">
+                    <input autocomplete="off" autofocus name="day" placeholder="Birthday Day" type="text">
+                    <input type="submit" value="Add">
+                </form>
+                <form action="/delete" method="post">
+                    <input autocomplete="off" autofocus name="name" placeholder="Name" type="text">
+                    <input type="submit" value="Delete">
+                </form>
+
             </div>
 
             <div class="section">
@@ -28,7 +39,13 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <!-- TODO: Loop through the database entries to display them in this table -->
+                        <!-- TODO_DONE: Loop through the database entries to display them in this table -->
+                        {% for person in people %}
+                            <tr>
+                                <td>{{ person["name"] }}</td>
+                                <td>{{ person["month"]|string + "/" + person["day"]|string }}</td>
+                            </tr>
+                        {% endfor %}
                     </tbody>
                 </table>
             </div>
