done just about all of pset9

--- a/CS50x/week9/pset9/finance/static/styles.css
+++ b/CS50x/week9/pset9/finance/static/styles.css
@@ -21,3 +21,10 @@ nav .navbar-brand .green
 {
     color: #2e944b;
 }
+
+/* .spaced {
+    display: flex;
+    flex-flow: column wrap;
+    width: fit-content;
+    align-items: flex-end;
+} */
