--- a/CS50x/week9/pset9/finance/templates/buy.html
+++ b/CS50x/week9/pset9/finance/templates/buy.html
@@ -1,8 +1,12 @@
 {% extends "layout.html" %}
 
+{% block title %}
+    Buy
+{% endblock %}
+
 {% block main %}
 
-<form action="/buy" method="post">
+<form action="/buy" method="POST">
     <input autocomplete="off" autofocus name="symbol" placeholder="Symbol" type="text">
     <input autocomplete="off" autofocus name="shares" placeholder="Shares" type="number">
     <input type="submit" value="Buy">
