--- a/CS50x/week9/pset9/finance/templates/layout.html
+++ b/CS50x/week9/pset9/finance/templates/layout.html
@@ -37,7 +37,7 @@
                             <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/logout">Log Out from ( {{session["name"] }} )</a></li>
                         </ul>
                     {% else %}
                         <ul class="navbar-nav ms-auto mt-2">
@@ -56,7 +56,8 @@
                 </div>
             </header>
         {% endif %}
-
+        
+        <p> session_id is: {{ session["user_id"] }}</p>
         <main class="container-fluid py-5 text-center">
             {% block main %}{% endblock %}
         </main>
