--- a/CS50x/week9/pset9/finance/templates/layout.html
+++ b/CS50x/week9/pset9/finance/templates/layout.html
@@ -57,7 +57,9 @@
             </header>
         {% endif %}
         
+        <!-- I added this for user clarity -->
         <p> session_id is: {{ session["user_id"] }}</p>
+
         <main class="container-fluid py-5 text-center">
             {% block main %}{% endblock %}
         </main>
