--- a/CS50x/week9/pset9/finance/templates/index.html
+++ b/CS50x/week9/pset9/finance/templates/index.html
@@ -8,10 +8,10 @@
 
 {% block main %}
     <div>
-        <table class="table">
+        <table class="table table-striped table-dark table-bordered">
             <thead>
                 <tr>
-                    <th>Symbol</th>
+                    <th scope="col">Symbol</th>
                     <th>Name</th>
                     <th>Shares</th>
                     <th>Price</th>
@@ -51,23 +51,21 @@
                     </tr>
 
                 {% endfor %}
-                <!-- THEN, create last 2 row items for their cash and total assets -->
-                <tr>
-                    <td>&nbsp;</td>
-                    <td>&nbsp;</td>
-                    <td>&nbsp;</td>
-                    <td>Cash</td>
-                    <td>${{ current_cash / 100 }}</td>
-                </tr>
-                <tr>
-                    <td>&nbsp;</td>
-                    <td>&nbsp;</td>
-                    <td>&nbsp;</td>
-                    <td>Total</td>
-                    <!-- current cash is in non-cent format, but acctotal is, so have to account for that -->
-                    <td>${{ (current_cash + accumulator.total * 100) / 100 }}</td>
-                </tr>
             </tbody>
+                <!-- THEN, create last 2 row items for their cash and total assets -->
+            <tfoot>
+                <tr>
+                    <td colspan="3"></td>
+                    <td><strong>Cash</strong></td>
+                    <td>${{ '%.2f' % (current_cash / 100) }}</td>
+                </tr>
+                <tr>
+                    <td colspan="3"></td>
+                    <td><strong>Total</strong></td>
+                    <!-- current cash is in non-cent format, but acctotal is, so have to account for that -->
+                    <td>${{ '%.2f' % ((current_cash + accumulator.total * 100) / 100) }}</td>
+                </tr>
+            </tfoot>
         </table>
     </div>
 
