--- a/CS50x/week9/pset9/finance/templates/layout.html
+++ b/CS50x/week9/pset9/finance/templates/layout.html
@@ -35,6 +35,7 @@
                             <li class="nav-item"><a class="nav-link" href="/buy">Buy</a></li>
                             <li class="nav-item"><a class="nav-link" href="/sell">Sell</a></li>
                             <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/profile">My Profile</a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/logout">Log Out from <strong>( {{session["name"] }} )</strong></a></li>
