--- a/CS50x/week9/pset9/finance/templates/register.html
+++ b/CS50x/week9/pset9/finance/templates/register.html
@@ -2,12 +2,11 @@
 
 {% block main %}
 
-<form action="/registration" method="post">
+<form action="/register" method="post">
     <input autocomplete="off" autofocus name="username" placeholder="Username" type="text">
     <input autocomplete="off" autofocus name="password" placeholder="Password" type="password">
     <input autocomplete="off" autofocus name="confirmation" placeholder="Confirm Password" type="password">
     <input type="submit" value="Register">
-
 </form>
 
 {% endblock %}
