--- a/CS50x/week9/pset9/finance/templates/register.html
+++ b/CS50x/week9/pset9/finance/templates/register.html
@@ -6,7 +6,7 @@
     <input autocomplete="off" autofocus name="username" placeholder="Username" type="text">
     <input autocomplete="off" autofocus name="password" placeholder="Password" type="password">
     <input autocomplete="off" autofocus name="confirmation" placeholder="Confirm Password" type="password">
-    <input type="submit" value="Register">
+    <button type="submit" value="Register">
 </form>
 
 {% endblock %}
