--- a/CS50x/week9/pset9/finance/templates/quote.html
+++ b/CS50x/week9/pset9/finance/templates/quote.html
@@ -4,7 +4,7 @@
 {% block main %}
 <form action="/quote" method="post">
     <input autocomplete="off" autofocus name="symbol" placeholder="Symbol" type="text">
-    <input type="submit" value="Quote">
+    <button type="submit" value="Quote">
 </form>
 
 
