--- a/CS50x/week9/pset9/finance/templates/sell.html
+++ b/CS50x/week9/pset9/finance/templates/sell.html
@@ -12,9 +12,9 @@
         {% for long in longs %}
             <option value={{ long }}>{{ long }}</option>
         {% endfor %}
-    </select>    
+    </select>
     <input autocomplete="off" autofocus name="shares" placeholder="Shares" type="number">
-    <input type="submit" value="Sell">
+    <button type="submit" value="Sell">
 
 </form>
 
