--- a/CS50x/week9/pset9/finance/templates/quoted.html
+++ b/CS50x/week9/pset9/finance/templates/quoted.html
@@ -3,6 +3,6 @@
 
 {% block main %}
 
-<p>A share of {{ company["name"] }} is {{ company["price"]|string }}.</p>
+<p>A share of {{ name }} is {{ price }}.</p>
 
 {% endblock %}
