--- a/CS50x/week9/pset9/finance/templates/sell.html
+++ b/CS50x/week9/pset9/finance/templates/sell.html
@@ -14,7 +14,7 @@
         {% endfor %}
     </select>
     <input autocomplete="off" autofocus name="shares" placeholder="Shares" type="number">
-    <button type="submit" value="Sell">
+    <button class="btn btn-primary" type="submit">Sell</button>
 
 </form>
 
